Saving new features and functionalities about how the user can get a video using the camera of the device

--- a/giF0S_Project/Pre_Catch/Styles/Pre_catch.css
+++ b/giF0S_Project/Pre_Catch/Styles/Pre_catch.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   margin: 0%;
   padding: 0%;
@@ -57,33 +58,25 @@ body #buttonZone #logotipe {
   padding-right: 0.2504%;
 }
 
-#videoContainer {
+body #menuSection {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 268pxs;
 }
 
-#videoContainer div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 59.3880%;
-  height: 548px;
-  background-color: #E6E6E6;
-}
-
-#videoContainer div h1 {
+body #menuSection #menuContainer {
   position: relative;
-  width: 98%;
-  height: 24px;
+  width: 47.56606397774687%‬;
+  background-color: #E6E6E6;
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+}
+
+body #menuSection h1 {
+  position: relative;
   margin-top: 0px;
   color: #FFFFFF;
   font-size: 14px;
@@ -93,70 +86,48 @@ body #buttonZone #logotipe {
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
-#videoContainer div h1 #buttonClose {
-  background-image: url(../../Images/button3.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 16px;
-  height: 14px;
-  margin-left: 74%;
+body #menuSection h2 {
+  color: #110038;
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "Chakra Petch";
 }
 
-#videoContainer div #showCapture {
-  width: 90%;
-  height: 548;
-  background-color: #FFFFFF;
-  border: 1px solid #979797;
-  -webkit-box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
-          box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+body #menuSection p {
+  color: #110038;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
 }
 
-#videoContainer div #catchButton {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  position: relative;
-  width: 12.7955%;
-  height: 36px;
-  margin: 0px;
-  padding: 0px;
+body #menuSection #listCreateGifs {
+  list-style: none;
+  color: #110038;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
 }
 
-#videoContainer div #catchButton #cameraButton {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 25%;
-  height: 32px;
-  margin: 0px;
-  padding: 0px;
-  background-color: #F7C9F3;
-  border: 1px solid #110038;
+body #buttonsContainer button {
+  background-color: #FFF4FD;
   border: 1px solid #110038;
   -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-}
-
-#videoContainer div #catchButton #Button {
-  width: 70%;
-  height: 32px;
-  margin: 0px;
-  padding: 0px;
-  background-color: #F7C9F3;
   color: #110038;
   font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
-  border: 1px solid #110038;
-  border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
-          box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
-/*# sourceMappingURL=Catch.css.map */
+
+body #buttonsContainer button:active {
+  background-color: #F7C9F3;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+body #buttonsContainer button:hover {
+  background-color: #F7C9F3;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+/*# sourceMappingURL=Pre_catch.css.map */
