--- a/giF0S_Project/Catch/Styles/Catch.scss
+++ b/giF0S_Project/Catch/Styles/Catch.scss
@@ -1,3 +1,135 @@
-body{
+$themeonegradientcolor1:#F7C9F3;
+$themeonegradientcolor2:#4180F6;
+$outsidebordercolor:#110038;
+$fontcolorheader:#FFFFFF;
+$backgroundcolorbtn:#F7C9F3;
+$backgroundcolorsearchbox: #E6E6E6;
+$searchBarColor: #B4B4B4;
+$primaryfont: "Chakra Petch";
+
+body {
+    margin: 0%;
+    padding: 0%;
+    border: 0%;
     background-color: rgb(250, 241, 249);
+
+    //THIS SECTION CONTENT THE TOP BAR WITH ITS GRADIENT STYLE
+    #title {
+        display: flex;
+        align-items: center;
+        background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
+        width: 100%;
+        height: 23px;
+        box-shadow: inset 0 -1px 0 0 $outsidebordercolor;
+
+        h1 {
+            font-size: 12px;
+            margin-left: 0.4867%;
+            font-family: $primaryfont;
+            font-weight: 400;
+            color: $fontcolorheader;
+        }
+    }
+
+    //THIS SECTION CONTENT LOGO GIFOS- BUTTONS CREATE GIFOS AND SELECT THEME AND MIS GUIFOS LINK 
+    #buttonZone {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        height: 118px;
+
+        #arrowBack {
+            margin-left: 6.3288%;
+        }
+
+        #logotipe {
+            align-self: center;
+            width: 91px;
+            // margin-left: 6.3288%;
+            padding-left: 0.5565%;
+            padding-right: 0.2504%;
+        }
+    }
+}
+
+#videoContainer {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 268pxs;
+
+    div {
+        display: flex;
+        flex-direction: column;
+        width: 59.3880%;
+        height: 548px;
+        background-color: #E6E6E6;
+
+        h1 {
+            position: relative;
+            width: 98%;
+            height: 24px;
+            margin-top: 0px;
+            color: $fontcolorheader;
+            font-size: 14px;
+            font-weight: 700;
+            font-family: $primaryfont;
+            background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
+
+            #buttonClose {
+                background-image: url(../../Images/button3.svg);
+                background-position: center;
+                background-repeat: no-repeat;
+                width: 16px;
+                height: 14px;
+                margin-left: 74%;
+            }
+        }
+
+        #showCapture {
+            width: 90%;
+            height: 548;
+            background-color: $fontcolorheader;
+            border: 1px solid #979797;
+            box-shadow: inset -2px -2px 0 0 $backgroundcolorsearchbox, inset 2px 2px 0 0 #000000;
+        }
+
+        #catchButton {
+            display: flex;
+            flex-direction: row;
+            position: relative;
+            width: 12.7955%;
+            height: 36px;
+            margin: 0px;
+            padding: 0px;
+
+            #cameraButton {
+                display: flex;
+                justify-content: center;
+                width: 25%;
+                height: 32px;
+                margin: 0px;
+                padding: 0px;
+                background-color: $themeonegradientcolor1;
+                border: 1px solid $outsidebordercolor;
+                border: 1px solid $outsidebordercolor;
+                box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+            }
+
+            #Button {
+                width: 70%;
+                height: 32px;
+                margin: 0px;
+                padding: 0px;
+                background-color: $themeonegradientcolor1;
+                color: $outsidebordercolor;
+                font-size: 16px;
+                font-weight: 400;
+                font-family: $primaryfont;
+                border: 1px solid $outsidebordercolor;
+                border: 1px solid $outsidebordercolor;
+                box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+            }
+        }
+    }
 }
