--- a/giF0S_Project/Catch/Styles/Catch.scss
+++ b/giF0S_Project/Catch/Styles/Catch.scss
@@ -92,6 +92,15 @@ body {
             background-color: $fontcolorheader;
             border: 1px solid #979797;
             box-shadow: inset -2px -2px 0 0 $backgroundcolorsearchbox, inset 2px 2px 0 0 #000000;
+
+            #video{
+                width: 100%;
+                height: 100%;
+            }
+            #gif{
+                width: 100%;
+                height: 100%;
+            }
         }
 
         #catchButton {
@@ -130,6 +139,73 @@ body {
                 border: 1px solid $outsidebordercolor;
                 box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
             }
+        }
+        #recordButton{
+            display: flex;
+            flex-direction: row;
+            position: relative;
+            width: 12.7955%;
+            height: 36px;
+            margin: 0px;
+            padding: 0px;
+            #circleButton{
+                display: flex;
+                justify-content: center;
+                width: 25%;
+                height: 32px;
+                margin: 0px;
+                padding: 0px;
+                background-color: #FF6161;
+                border: 1px solid $outsidebordercolor;
+                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+            }
+            #readyButton{
+                width: 70%;
+                height: 32px;
+                margin: 0px;
+                padding: 0px;
+                color: $fontcolorheader;
+                font-size: 16px;
+                font-weight: 400;
+                font-family: $primaryfont;
+                background-color: #FF6161;
+                border: 1px solid $outsidebordercolor;
+                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+            }
+        }
+    }
+    #stopButton{
+        display: flex;
+        flex-direction: row;
+        position: relative;
+        width: 12.7955%;
+        height: 36px;
+        margin: 0px;
+        padding: 0px;
+
+        #1Button{
+            display: flex;
+            justify-content: center;
+            width: 25%;
+            height: 32px;
+            margin: 0px;
+            padding: 0px;
+            background-color: #FF6161;
+            border: 1px solid $outsidebordercolor;
+            box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+        }
+        #2Button{
+            width: 70%;
+            height: 32px;
+            margin: 0px;
+            padding: 0px;
+            color: $fontcolorheader;
+            font-size: 16px;
+            font-weight: 400;
+            font-family: $primaryfont;
+            background-color: #FF6161;
+            border: 1px solid $outsidebordercolor;
+            box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
         }
     }
 }
