--- a/giF0S_Project/Catch/Styles/Catch.css
+++ b/giF0S_Project/Catch/Styles/Catch.css
@@ -171,9 +171,7 @@ body #buttonZone #logotipe {
 }
 
 #videoContainer div #recordButton {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -217,10 +215,8 @@ body #buttonZone #logotipe {
           box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#videoContainer #stopButton {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+#videoContainer div #stopButton {
+  display: none;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -232,7 +228,7 @@ body #buttonZone #logotipe {
   padding: 0px;
 }
 
-#videoContainer #stopButton #1Button {
+#videoContainer div #stopButton #buttonTwo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -243,13 +239,13 @@ body #buttonZone #logotipe {
   height: 32px;
   margin: 0px;
   padding: 0px;
-  background-color: #FF6161;
+  background-color: #61ff88;
   border: 1px solid #110038;
   -webkit-box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#videoContainer #stopButton #2Button {
+#videoContainer div #stopButton #buttonThree {
   width: 70%;
   height: 32px;
   margin: 0px;
