--- a/giF0S_Project/Styles/PreCatch/preCatch.scss
+++ b/giF0S_Project/Styles/PreCatch/preCatch.scss
@@ -58,10 +58,11 @@ body {
 
         #menuContainer {
             position: relative;
-            width: 47.56606397774687%‬;
+            width: 47.5%;
+            height: 386px;
             background-color: $backgroundcolorsearchbox;
             box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
-        }
+        
 
         h1 {
             position: relative;
@@ -72,61 +73,97 @@ body {
             font-family: $primaryfont;
             background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
         }
+        #here{
+            display:flex;
+            flex-direction: row;
+            justify-content: center;
+            
+            img{
+                width: 32px;
+                height: 32px;
+            }
 
         h2 {
+            margin-left: 16px;
             color: $outsidebordercolor;
             font-size: 16px;
             font-weight: 700;
             font-family: $primaryfont;
         }
+    }
 
         p {
             color: $outsidebordercolor;
+            margin-left: 73px;
             font-size: 14px;
             font-weight: 400;
             font-family: $primaryfont;
+            line-height: 20px;
         }
 
         #listCreateGifs {
             list-style: none;
+            margin-left: 33px;
             color: $outsidebordercolor;
             font-size: 14px;
             font-weight: 400;
             font-family: $primaryfont;
+            line-height: 20px;
         }
     }
 
     #buttonsContainer {
+        display: flex;
+        justify-content:  center;
+        width: 100%;
+        margin-left: 0px;
+
         button {
-            width: 100%;
+            align-self: center;
+            display: flex;                       
+            cursor: pointer;
+            width: 133px;        
+            height: 36px;
+            margin-left: 16px;
             background-color: #FFF4FD;
             border: 1px solid $outsidebordercolor;
             box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
             color: $outsidebordercolor;
             font-size: 16px;
             font-weight: 400;
-            font-family: $primaryfont;
+            font-family: $primaryfont;               
 
-            &:active {
-                background-color: #F7C9F3;
-                outline: 1px dotted $outsidebordercolor;
-                outline-offset: -4px;
-            }
+                &:active {
+                    background-color: #F7C9F3;
+                    outline: 1px dotted $outsidebordercolor;
+                    outline-offset: -4px;
+                }
 
-            &:hover {
-                background-color: #F7C9F3;
-                outline: 1px dotted $outsidebordercolor;
-                outline-offset: -4px;
+                &:hover {
+                    background-color: #F7C9F3;
+                    outline: 1px dotted $outsidebordercolor;
+                    outline-offset: -4px;
+                }
+                a {
+
+                    display: flex;
+                    justify-content: center;
+                    text-decoration: none;                    
+                    color: $outsidebordercolor;
+                    height: 100%;
+                    width: 100%;                    
             }
         }
     }
-    #suggestions{
+}
+
+    #suggestions {
         width: 83.4492%;
         margin-top: 153px;
         margin-left: 6.9541%;
 
-        #suggest{
-                width: 100%;
+        #suggest {
+            width: 100%;
         }
     }
 }
